<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#FFDEDE"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/editsong"
        android:textColor="#937DC2"
        android:textSize="45sp"
        android:textStyle="bold" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_marginTop="5dp"
        android:background="#937DC2"
        android:layout_marginBottom="13dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="#C689C6"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textStyle="italic"
            android:hint="2" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#C689C6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="Home"
            android:inputType="textPersonName"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/singer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singer"
            android:textColor="#C689C6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSinger"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="Aisyah Aiz"
            android:inputType="textPersonName"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="#C689C6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="2010"
            android:inputType="number"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="#C689C6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numStars="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>
